hphp/hack/test/typecheck/as_expression/tuple3.php.exp
File "tuple3.php", line 7, characters 5-6:
Invalid argument (Typing[4098])
File "tuple3.php", line 3, characters 12-29:
This tuple has 3 elements
File "tuple3.php", line 6, characters 9-21:
This one has 2 elements
